--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,21 +21,30 @@ jobs:
       TURBO_CACHE: remote:rw
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.5.0
-
-      - name: Setup Node.js
+      - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: '22.13.1'
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
 
-      - name: Build project
-        run: pnpm run build
+      - name: Install Turborepo CLI
+        run: npm install --global turbo
+
+      - name: Enable and set pnpm version
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.5.0 --activate
+
+      - name: Vercel link
+        run: vercel link --yes --token=${{ secrets.TURBO_TOKEN }} --project=${{ secrets.VERCEL_PROJECT_NAME_MAIL }}
+
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.TURBO_TOKEN }}
+
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.TURBO_TOKEN }}
